--- a/1.html
+++ b/1.html
@@ -14,6 +14,13 @@
   <strong><u>조</u>연주</strong> 오정현
 
   <h2>제주대학교sjdkdfafkj</h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gPobvDNa4L0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+  <p>
+    <video src="C:/Users/LG/OneDrive/바탕 화면/web/[2021 파이널 체크포인트] 주혜연의 꽃필날 연계지문 모의고사/10강 꽃필날 모의고사 10회_(고3-기본).mp4" width="500", height="350" controls="controls"></video>
+
+  </p>
   <b1><a href="https://www.naver.com/"
   target="_blank" title="네이버">영어교육과</a></b1>
   <b2>영어교육과</b2>
