--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gPobvDNa4L0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
   <p>
-    <video src="C:/Users/LG/OneDrive/바탕 화면/web/[2021 파이널 체크포인트] 주혜연의 꽃필날 연계지문 모의고사/10강 꽃필날 모의고사 10회_(고3-기본).mp4" width="500", height="350" controls="controls"></video>
+    <video src="10강 꽃필날 모의고사 10회_(고3-기본).mp4" width="500", height="350" controls="controls"></video>
 
   </p>
   <b1><a href="https://www.naver.com/"
