--- a/1.html
+++ b/1.html
@@ -18,11 +18,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gPobvDNa4L0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
   <p>
-    <video src="10강 꽃필날 모의고사 10회_(고3-기본).mp4" width="500", height="350" controls="controls"></video>
+    <video embed src="10강 꽃필날 모의고사 10회_(고3-기본).mp4" width="500", height="350" controls="controls"></video>
 
   </p>
-  <b1><a href="https://www.naver.com/"
-  target="_blank" title="네이버">영어교육과</a></b1>
+  <b1><a href="http://www.ebsi.co.kr/ebs/lms/player/retrieveLmsPlayerHtml5.ebs?mode=0&sbjtapplyId=574201098&sbjtId=S20200000029&lessonId=LS000000259979&lecGbn=V1M4&player=silverlight&wide=true&eventType=null&lectwin=0&vod=1&webmark=&newPlayYn=undefined&ecd_mode=USER&prmId=undefined&irecord=undefined&playerSelect=html5&pageType=new"
+  target="_blank" title="주혜연 7강">영어교육과</a></b1>
   <b2>영어교육과</b2>
   <img src="coding.jpg" width="100%">
   </p><p style="margin-top:45px;">What the hell you fucking doing huh?</p>Go fucking yourself
