--- a/1.html
+++ b/1.html
@@ -26,5 +26,6 @@
   <b2>영어교육과</b2>
   <img src="coding.jpg" width="100%">
   </p><p style="margin-top:45px;">What the hell you fucking doing huh?</p>Go fucking yourself
+  <video id="myVideo" src="C:/Users/LG/OneDrive/바탕 화면/참교육영어/10강 꽃필날 모의고사 10회_(고3-기본).mp4" controls autoplay></video>
 </body>
 </html>
