--- a/1.html
+++ b/1.html
@@ -26,6 +26,12 @@
   <b2>영어교육과</b2>
   <img src="coding.jpg" width="100%">
   </p><p style="margin-top:45px;">What the hell you fucking doing huh?</p>Go fucking yourself
+  
   <video id="myVideo" src="C:/Users/LG/OneDrive/바탕 화면/참교육영어/10강 꽃필날 모의고사 10회_(고3-기본).mp4" controls autoplay></video>
+  
+  <video width="480" height="320" controls="controls">
+  <source src="C:/Users/LG/OneDrive/바탕 화면/참교육영어/10강 꽃필날 모의고사 10회_(고3-기본).mp4" type="video/mp4">
+</video>
+  
 </body>
 </html>
